--- a/node_login/views/register.ejs
+++ b/node_login/views/register.ejs
@@ -12,6 +12,12 @@
   <body>
     <h1>Register</h1>
 
+    <ul>
+      <% if(typeof errors != "undefined") { %> <% errors.forEach((error) =>{ %>
+      <li><%= error.message %></li>
+      <% }) %> <% } %>
+    </ul>
+
     <form action="/users/register" method="POST">
       <div>
         <input type="text" id="name" name="name" placeholder="Name" required />
